    - Smelting many metals is now not possible any more in crystallizer
    - Changed order of some icons
    - Some changes in tech tree
    - Some recipes when enriching from crushed recoures yielded a small amount of an other ore. Now that ore is always in its crushed form.
    - Renamed mineral water pumpjack prototype (All of your mineral pumpjacks will be deleted when updating)
  Bugfixes:
    - Fixed some technology requirements for AAI Containers
    - Fixed some technology icons
    - Fixed tungsten plate and tungsten steel smelting recipe chains
    - Fixed recipe casting stainless steel gear wheel
    - Fixed requirement of light emitting diode for tier 2 modules
    - Fixed assembling machines required for crafting tier 2 and tier 3 modules
    - Fixed mineral water and iodine brine fluids icons were not showing up selecting them as train stop names
    - Fixed molten indium from lava recipe
  Balancing:
    - Belt immunity equipment is now unlocked earlier
    - Rebalanced crystallizer
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2025-05-23
  Changes:
    - Updated ja locale thanks to snow note
    - Increased stack size of stack inserters
    - Agricultural tower does not require compressor to be built
    - Reduced crafting speed of alloy forge
    - Removed basic smelting, intermadiate smelting, melting and casting recipes from alloy forge
    - Reduced number of spores from algae
    - Liquids in barrels are shown now in fluids group
  Bugfixes:
    - Fixed zinc casting recipes produced more zinc oxide and zinc sulfate than they produce
    - Fixed indium casting recipes produced more indium sulfate than they produce
    - Fixed molten recipes from crushed iron ore and crushed copper ore
    - Fixed name from train boige to train bogie (you will have to select again the recipe of the assembling machine)