@@ -1087,6 +1087,7 @@ sp-kr-research-data=Research data
 sp-kr-stabilizer-charging=Stabilizer charging
 sp-kr-void-crushing=Void crushing
 sp-manufacturing=Manufacturing
+sp-manufacturing-electronics=Manufacturing electronics
 sp-matter-condensing=Matter condensing
 sp-oxidizing=Oxidizing
 sp-pathogen-growing=Pathogen growing
@@ -2280,6 +2281,7 @@ sp-kr-singularity-lab=Singularity lab
 sp-kr-stellar-sinkhole-forge=Stellar sinkhole forge
 sp-kr-superior-inserters=Superior inserters
 sp-kr-wind-turbine=Wind turbine
+sp-light-emitting-diode=Light emitting diode
 sp-logistic-science-pack=Logistic science pack
 sp-lumber-mill=Lumber mill
 sp-magnesium-processing=Magnesium processing
